@@ -141,7 +141,10 @@ struct {
   { "OptionsFilterAdMameScale2x", ID_OPTIONS_FILTER16BIT_ADVANCEMAMESCALE2X },
   { "OptionsFilterSimple2x", ID_OPTIONS_FILTER16BIT_SIMPLE2X },
   { "OptionsFilterBilinear", ID_OPTIONS_FILTER_BILINEAR },
-  { "OptionsFilterBilinearPlus", ID_OPTIONS_FILTER_BILINEARPLUS },  
+  { "OptionsFilterBilinearPlus", ID_OPTIONS_FILTER_BILINEARPLUS },
+  { "OptionsFilterIFBNone", ID_OPTIONS_FILTER_INTERFRAMEBLENDING_NONE },
+  { "OptionsFilterIFBMotionBlur", ID_OPTIONS_FILTER_INTERFRAMEBLENDING_MOTIONBLUR },
+  { "OptionsFilterIFBSmart", ID_OPTIONS_FILTER_INTERFRAMEBLENDING_SMART },  
   { "OptionsJoypadConfigure", ID_OPTIONS_JOYPAD },
   { "OptionsJoypadMotionConfigure", ID_OPTIONS_JOYPAD_MOTIONCONFIGURE },
   { "OptionsJoypadAutofireA", ID_OPTIONS_JOYPAD_AUTOFIRE_A },
