@@ -611,13 +611,16 @@
 #define ID_OPTIONS_SOUND_VOLUME_4X      40185
 #define ID_OPTIONS_FILTER_BILINEAR      40186
 #define ID_OPTIONS_FILTER_BILINEARPLUS  40187
+#define ID_OPTIONS_FILTER_INTERFRAMEBLENDING_NONE 40188
+#define ID_OPTIONS_FILTER_INTERFRAMEBLENDING_MOTIONBLUR 40189
+#define ID_OPTIONS_FILTER_INTERFRAMEBLENDING_SMART 40190
 
 // Next default values for new objects
 // 
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        140
-#define _APS_NEXT_COMMAND_VALUE         40188
+#define _APS_NEXT_COMMAND_VALUE         40191
 #define _APS_NEXT_CONTROL_VALUE         1240
 #define _APS_NEXT_SYMED_VALUE           102
 #endif
